--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: cover;
             /*
-            px % auto cover contain
+                background-color: black;
+                background-image: url('imagens/wallpaper002.jpg');
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;
             */
+            background: black url('imagens/wallpaper002.jpg') center center / cover no-repeat fixed;
         }
+
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,7 +32,9 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem suscipit quae in, qui blanditiis quaerat quam nihil sed adipisci? Molestias expedita quisquam autem culpa iste voluptas iure odio maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, aspernatur quo perferendis repellendus corporis quod laborum alias illo culpa voluptas officiis sunt aliquam, incidunt vitae laboriosam eius officia odio dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus molestias enim corrupti pariatur blanditiis ea alias, dolores officiis sint maxime optio nesciunt cumque neque quis facere veniam vitae quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus facere assumenda hic. Obcaecati, aut iusto maiores inventore vero est corporis veritatis expedita, mollitia doloribus natus iste itaque esse optio ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sequi, sint quos repellat vero ipsum in nihil eos neque facilis sit iure aspernatur, reiciendis placeat non cumque! Quae, nisi veniam?</p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem suscipit quae in, qui blanditiis quaerat quam nihil sed adipisci? Molestias expedita quisquam autem culpa iste voluptas iure odio maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, aspernatur quo perferendis repellendus corporis quod laborum alias illo culpa voluptas officiis sunt aliquam, incidunt vitae laboriosam eius officia odio dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus molestias enim corrupti pariatur blanditiis ea alias, dolores officiis sint maxime optio nesciunt cumque neque quis facere veniam vitae quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus facere assumenda hic. Obcaecati, aut iusto maiores inventore vero est corporis veritatis expedita, mollitia doloribus natus iste itaque esse optio ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sequi, sint quos repellat vero ipsum in nihil eos neque facilis sit iure aspernatur, reiciendis placeat non cumque! Quae, nisi veniam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio qui assumenda eveniet dolorem! Beatae dolor recusandae optio ipsam odit suscipit dolorem delectus dicta. Mollitia excepturi consequatur sunt accusamus cumque ipsum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo iusto consectetur architecto aliquid dolores non minima adipisci, perspiciatis fuga recusandae vel rerum quo? Delectus dolores, id natus illo amet fuga. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum facere vel harum perferendis expedita, quod pariatur accusamus atque alias esse magni similique iure laboriosam architecto quaerat quia sunt, nesciunt deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus a neque et magnam alias eaque saepe natus nesciunt modi, deleniti harum fugiat cupiditate corrupti ea eligendi illo itaque doloremque ipsam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae cupiditate pariatur nam! Autem deserunt, ullam rem temporibus eaque tempora laudantium molestiae nemo nobis, dolor praesentium reprehenderit, consequuntur ab maxime veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, eligendi veniam laboriosam incidunt assumenda sequi id nesciunt quam repellendus, quisquam doloremque commodi ea quia deleniti mollitia ab recusandae quos amet! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dolor. Voluptate impedit quia ab et possimus itaque dolorem perspiciatis deserunt suscipit deleniti repellendus, dolore maxime beatae, delectus eaque cumque inventore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et fugiat culpa maiores rerum. Distinctio accusamus, corrupti repellendus vel dolor explicabo atque maxime provident sunt enim quo ut maiores cupiditate quis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, enim. A maxime velit officia, eligendi sit voluptatibus vitae, adipisci libero soluta cum atque reprehenderit ullam explicabo nesciunt odit distinctio earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae veritatis commodi fugiat molestias quidem! Mollitia perspiciatis voluptas corporis autem impedit maxime magnam aut nam hic exercitationem, ipsum error molestiae nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque explicabo ipsum animi. Tempora mollitia voluptates dolor architecto perferendis, assumenda laboriosam numquam reiciendis ad esse nemo ipsa quos ratione cupiditate saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias optio, suscipit minima ipsum odio sit vel temporibus error molestias repudiandae autem laborum dolore at vero maiores magnam id iusto assumenda! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ullam, accusantium blanditiis, officiis reiciendis pariatur ad alias dolor minus perferendis non tempora, minima modi iste atque! Earum hic necessitatibus illum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis repudiandae sit vero cumque fugiat nihil dolores expedita, nostrum laborum labore accusantium dolorem rem tempore inventore at provident similique iusto ipsam.
+        </p>
     </main>
 </body>
 </html>
