criei o HTML do d012

--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -7,7 +7,7 @@
     <title>Desafio 11</title>
     <style>
         body {
-            background: black url('espaco.jpg') center center / cover no-repeat fixed ;
+            background: black url('imagens/espaco.jpg') center center / cover no-repeat fixed ;
         }
 
         img {
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="astronauta.png" alt="Astronalta">
+    <img src="imagens/astronauta.png" alt="Astronalta">
 </body>
 </html>
