--- a/exercicios/ex023/tabela01.html
+++ b/exercicios/ex023/tabela01.html
@@ -12,23 +12,21 @@
 
         table {
             width: 400px;
+            height: 400px;
             border: 2px solid black;
             border-collapse: collapse;
             /* por padrão vem "separate" */
         }
 
-        tr.linha {
-            background-color: lightgray;
-        }
-
         td {
             border: 1px solid black;
             padding: 8px;
-            text-align: center;
+            text-align: center; /* Alinhamento horizontal (right, center, left) */
+            vertical-align: middle; /* Alinhamento vertical (top, middle, bottom) */
         }
 
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
 
     </style>
@@ -48,17 +46,17 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!-- Segunda linha -->
+        <tr> <!-- Segunda linha -->
             <td>A2</td>
-            <td>B2</td>
+            <td class="numero">B2</td>
             <td>C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
-            <td class="dado">A3</td>
+            <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
-        <tr class="linha"> <!-- Quarta linha -->
+        <tr> <!-- Quarta linha -->
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
