--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -11,19 +11,16 @@
     <h1>Minhas redes sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="foto-perfil.png" alt="foto de perfil">
-    <p>Olá meu nome é <strong>Arthur Soares</strong>, tenho 18 anos e curso o ensino medio profissional/técnico (em redes de computadores). Comecei a estudar programação a alguns meses por que gosto muito da area e pretendo ser desenvolvedor full-stack.</p>
+    <p>
+        Olá meu nome é <strong>Arthur Soares</strong>, tenho 18 anos e curso o ensino medio profissional/técnico (em redes de computadores). Comecei a estudar programação a alguns meses por que gosto muito da area e pretendo ser desenvolvedor full-stack.
+    </p>
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="icone-youtube.png" alt="YouTube"><a href="https://youtube.com/" target="_blank" rel="external">/meuyoutube</a> - Se inscreve lá no meu canal no YouTube</li>
-
         <li><img src="icone-github.png" alt="GitHub"><a href="https://github.com/" target="_blank" rel="external">/meugithub</a> - Acessa meu repositório público no GitHub</li>
-
         <li><img src="icone-instagram.png" alt="Instagram"><a href="https://instagram.com/arthur_2k03" target="_blank" rel="external">/arthur_2k03</a> - Me segue lá no Instagram</li>
-
         <li><img src="icone-linkedin.png" alt="Linkedin"><a href="https://linkedin.com/" target="_blank" rel="external">/meulinkedin</a> - Me adiciona lá no Linkedin</li>
-
         <li><img src="icone-twitter.png" alt="Twitter"><a href="https://twitter.com/" target="_blank" rel="external">/meutwitter</a> - Me segue lá no Twitter</li>
-
         <li><img src="icone-facebook.png" alt="Facebook"><a href="https://facebook.com/" target="_blank" rel="external">/meufacebook</a> - Me acompanha lá no Facebook</li>
     </ul>
 </body>
